# Project-3-1

./: .gitignore  README.md  gazebo.sh  host_x11_prep.sh  shell.sh  up.sh
motion-planning-1/: docker-compose.yml  empty_world.sh
motion-planning-1/ws/: iiwa_demo_instructions.txt
motion-planning-1/ws/devel/: local_setup.bash  local_setup.fish  setup.fish  setup.zsh
motion-planning-1/ws/src/iiwa_dynamic_demo/: CMakeLists.txt
motion-planning-2/devel/: .catkin  local_setup.sh
motion-planning-2/devel/lib/pkgconfig/: configuration.pc  iiwa_description.pc  my_robot_description.pc
motion-planning-2/src/configuration/: .setup_assistant  CMakeLists.txt
motion-planning-2/src/configuration/config/: fake_controllers.yaml  joint_limits.yaml  m_robot.srdf  ompl_planning.yaml
motion-planning-2/src/configuration/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  planning_context.launch  (+7 more)
motion-planning-2/src/my_robot_description/: CMakeLists.txt  package.xml
ws/: MRobot_Gazebo.urdf  interp_experiment_allplanners.csv
ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh
ws/experiment_results/nice'n clean/: interp_clean_kpi_summary.csv
ws/src/arm_nav_basics/: CMakeLists.txt  package.xml
ws/src/iiwa_description/: CMakeLists.txt
ws/src/iiwa_dynamic_demo/: reachable_samples.csv
ws/src/iiwa_moveit_config/: .setup_assistant  package.xml
(+89 files in other folders)
